--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
  <div class="site-container header-container">
    <div class="wrap">
-     <header class="header site-header">
+     <header class="header site-header2">
        <div id="nav-background">
        <div id="nav-container">
          <header id="nav-header">
