--- a/index.html
+++ b/index.html
@@ -14,23 +14,18 @@
 <body>
  <div class="site-container header-container">
    <div class="wrap">
-     <header class="header site-header">
-       <div id="nav-background">
-       <div id="nav-container">
-         <header id="nav-header">
-           <h1><a href="#" id="nav-logo">FlexNav</a></h1>
-           <div id="nav-menu-button">MENU</div>
-         </header>
-         <nav>
-           <ul class="nav-ul hide-ul">
-             <li><a class="nav-link active-link" href="#">Home</a></li>
-             <li><a class="nav-link" href="#">News</a></li>
-             <li><a class="nav-link" href="#">Contact</a></li>
-             <li><a class="nav-link" href="#">About</a></li>
-           </ul>
-         </nav>
-       </div>
-     </div>
+     <header class="header">
+       <nav class="site-header">
+         <div class="site-logo">
+           <a href="#"><img src="./images/logo.png" alt="/"></a>
+         </div>
+         <ul class="head-navigation">
+           <li><a href="#">About</a></li>
+           <li><a href="#">Resources</a></li>
+           <li><a href="#">Tutorials</a></li>
+           <li><a href="#">Blog</a></li>
+         </ul>
+       </navclasssite-header>
      </header>
    </div>
  </div>
