--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.4.0.min.js" charset="utf-8"></script>
+  <script src="./js/jquery.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
   <title>All Custom Theme</title>
 </head>
@@ -18,6 +18,11 @@
        <nav class="site-header">
          <div class="site-logo">
            <a href="#"><img src="./images/logo.png" alt="/"></a>
+         </div>
+         <div class="menu-toggle-button">
+           <div class="menu-line menu-line-1"></div>
+           <div class="menu-line menu-line-2"></div>
+           <div class="menu-line menu-line-3"></div>
          </div>
          <ul class="head-navigation">
            <li><a href="#">About</a></li>
