--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
      <div class="wrap">
        <h3 class="cta-title">When a game has object physics</h3>
        <div class="f-cta-content">
-         <p>Are you looking for the cleanest, simple and easy to use WordPress theme for your website? Many WordPress themes come with tons of options making it difficult to set up and use.</p>
+         <p>Are you looking for the cleanest, simple and easy to use WordPress theme for your website?<br> Many WordPress themes come with tons of options making it difficult to set up and use.</p>
        </div>
        <div class="f-cta-button"><a href="#">Register For Newsletters</a></div>
      </div>
