--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <script src="./js/jquery.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
-  <title>All Custom Theme</title>
+  <title>All Custom Pro Theme</title>
 </head>
 <body>
  <div class="site-container header-container">
